# lazysubs-eye

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EIN.md  LICENSE  README.md  SECURITY.md
.github/: labels.yml
.github/ISSUE_TEMPLATE/: beta-feedback.md
.github/workflows/: ci.yml  release.yml
docs/: ARQUITECTURA.md  AUDITORIA-PREPUBLICACION.md  CHECKLIST-PUBLICACION.md  ESTADO.md  PLAN-PRODUCTO.md  PLAN-PUBLICACION.md
openspec/: config.yaml
openspec/changes/adaptive-tui-ux/: apply-progress.md  design.md  map.md  scope.md  tasks.md  verify-report.md
openspec/changes/codex-reset-credits/: apply-progress.md  tasks.md
openspec/changes/observable-health-diagnostics/: apply-progress.md  design.md  map.md  scope.md  tasks.md  verify-report.md
openspec/changes/release-project-readiness/: apply-progress.md  design.md  map.md  scope.md  tasks.md  verify-report.md
openspec/changes/reliable-history-ingestion/: apply-progress.md  design.md  map.md  scope.md  tasks.md  verify-report.md
openspec/changes/runtime-performance/: apply-progress.md  design.md  map.md  scope.md  tasks.md  verify-report.md
packaging/aur/: PKGBUILD
perf/: baseline.json
scripts/: check-release-readiness.sh  smoke-release.sh  verify-version.sh
scripts/benchmarks/: run_budgets.sh
src/: cache.rs  config.rs  diagnostics.rs  file_lock.rs  history.rs  install.rs  main.rs  notify.rs  opencode_tokens.rs  output.rs  performance.rs  pi_tokens.rs  tokens.rs  tui.rs
src/providers/: claude.rs  codex.rs  minimax.rs  mod.rs
tests/: cli_check.rs  cli_smoke.rs
(+33 files in other folders)
