[package]
name = "lazysubs"
version = "0.1.0"
edition = "2021"
description = "AI subscription usage monitor for Omarchy (waybar + TUI)"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
ratatui = "0.29"

[profile.release]
strip = true
lto = true
