[package]
name = "lazysubs-eye"
version = "0.14.0"
edition = "2021"
description = "AI subscription usage monitor for Omarchy (waybar + TUI)"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
libc = "0.2"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
toml = "0.9"
toml_edit = "0.23"

[profile.release]
strip = true
lto = true
